# NovaEval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =0.1.0  AGENT_SCORERS_TEST_COVERAGE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATASETS_API_CHANGES.md  Dockerfile  Dockerfile.api  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASKS.md  LICENSE  PROJECT_STRUCTURE.md  RAG_EVALUATION_README.md  README.md  ROADMAP.md  SENIOR_ENGINEER_REVIEW.md  agent_scorers_context_requirements.md  ai_gateway_logs.jsonl  codecov.yml  conversation_dataset.json  create_dataset.py  dataset_items_response.json  dataset_publish_response.json  del.json  demo_rag_evaluation.py  dev-00000-of-00001.parquet  fetch_traces.py  fetch_traces_batch.py  fix_cell_9.py  fix_notebook.py  generate_mmlu_evaluation_dataset.py  how bd56d29  manual_mapping.py  noveum-api.json  openapi_spec_noveum.json  publish_dataset_version.py  (+12 more)
.github/: pull_request_template.md
agentdata/: sample_agent_data.json
app/: README.md
code_dataset_api/: Datasets Response  create_dataset.py  create_dataset_version.py  dataset_creation_response.json  dataset_items_response.json  dataset_publish_response.json  dataset_version_response.json  download_geval_dataset.py  generate_conversation_dataset.py  judgelm_preprocess.py  mmlu_evaluation_dataset.json  new_file.txt  publish_dataset_version.py  schema.tsx  test_list_dataset_items.py  upload_dataset.py  validation-00000-of-00001.parquet
demo/: agent_evaluation_demo.ipynb  agent_evaluation_demo_backup.ipynb  clean_tool_call_spans.py  dataset_analysis.ipynb  dataset_tool_calls_removed.json  processed_agent_dataset.csv  processed_agent_dataset.json  processed_agent_dataset_tool_calls_removed.json  upload_dataset.py
demo_reddit_agent/: dataset.json  dataset_analysis.ipynb  dataset_items_response.json  del.json  processed_agent_dataset.csv
docs/: Gemfile  LOCAL_DEVELOPMENT.md  README.md  _config.yml  api-reference.md  cli-reference.md  contributing.md  examples.md  getting-started.md  index.md  rag_evaluation_system.md  user-guide.md
examples/: agent_evaluation_clean.py  agent_scoring_example.py  basic_evaluation.py  config_evaluation.py  custom_evaluator_example.py  enhanced_agent_scoring_example.py  evaluator_usage_example.py  ijson_streaming_example.py  multi_tool_agent_scoring_example.py  noveum_improvements_evaluation.py  noveum_platform_api_demo.ipynb  ollama_trial.py  openai_inference_example.py  panel_evaluation.py  panel_evaluation.yaml  run_agent_evaluation.py  sample_config.yaml  simple_agent_dataset.csv  simple_custom_evaluator.py  test_aggregators.py
kubernetes/: README.md  create-secret.sh  deployment.yaml
noveum_customer_support_bt/: README_workflow.md  api_data.json  create_dataset.py  create_dataset_version.py  demo_utils.py  e2e_noveum_user_bot.ipynb  fetch_dataset_items.py  final_agent_evaluation_demo.ipynb  fix_api_data_v2.py  novapilot_utils.py  noveum_agent_requirements.txt  noveum_docs.json  noveum_user_bot.ipynb  preprocess_filter.py  preprocess_map.py  upload_scores.py
reddit_agent_demo/: README.md  agent_evaluation_demo.ipynb  dataset_tool_calls_removed.json  demo_utils.py  final_agent_evaluation_demo.ipynb  final_analysis.ipynb  preprocess_map.py  processed_agent_dataset_tool_calls_removed.json
(+344 files in other folders)
