[metadata]
name = novaeval
version = attr: novaeval.__version__
author = Noveum Team
author_email = team@noveum.ai
description = A comprehensive AI model evaluation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Noveum/NovaEval
project_urls =
    Bug Tracker = https://github.com/Noveum/NovaEval/issues
    Documentation = https://noveum.github.io/NovaEval
    Source = https://github.com/Noveum/NovaEval
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.0.0
    pyyaml>=6.0
    requests>=2.28.0
    numpy>=1.21.0
    pandas>=1.3.0
    tqdm>=4.64.0
    click>=8.0.0
    rich>=12.0.0
    jinja2>=3.0.0
    plotly>=5.0.0
    scikit-learn>=1.0.0
    datasets>=2.0.0
    transformers>=4.20.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    novaeval = novaeval.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=2.20.0
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0

openai =
    openai>=1.0.0
    tiktoken>=0.4.0

anthropic =
    anthropic>=0.3.0

aws =
    boto3>=1.26.0

azure =
    azure-ai-ml>=1.8.0
    azure-identity>=1.13.0

gcp =
    google-cloud-aiplatform>=1.25.0

metrics =
    evaluate>=0.4.0
    rouge-score>=0.1.2
    bert-score>=0.3.13
    sacrebleu>=2.3.0

visualization =
    matplotlib>=3.5.0
    seaborn>=0.11.0

all =
    %(openai)s
    %(anthropic)s
    %(aws)s
    %(azure)s
    %(gcp)s
    %(metrics)s
    %(visualization)s

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-tests.*]
disallow_untyped_defs = False

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    --verbose
    --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

